# project-2_zimakosov_m25-555

./: .gitignore  Makefile  README.md  demo_final.cast  pyproject.toml
src/: decorators.py
src/primitive_db/: constants.py  core.py  decorators.py  engine.py  main.py  parser.py  utils.py
