[project]
name = "project-2-zimakosov-m25-555"
version = "0.1.1"
description = ""
authors = [
    {name = "Vlad Zimakosov",email = "zimakosov-vladik@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt (>=0.4.1,<0.5.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Место, где искать код пакета (src-layout!)
[tool.poetry]
packages = [
  { include = "primitive_db", from = "src" }
]

# Точка входа CLI (импорт из пакета, НЕ через src.)
[project.scripts]
project = "primitive_db.main:main"
