[tool.poetry]
name = "project-2-zimakosov-m25-555"
version = "0.1.1"
description = "Примитивная база данных"
readme = "README.md"
authors = ["Vlad Zimakosov <zimakosov-vladik@yandex.ru>"]

# ВАЖНО: чётко указываем, что пакет лежит в src/
packages = [
  { include = "primitive_db", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
prompt = ">=0.4.1,<0.5.0"
prettytable = ">=3.16.0,<4.0.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.14.3,<0.15.0"

[tool.poetry.scripts]
database = "primitive_db.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
